updated the image from the slide section msq_jump and added the interview about my see of fresh water #3. fixed the order from the interview section to mach the calendar day

--- a/css/style.css
+++ b/css/style.css
@@ -376,6 +376,7 @@ a.copyright:hover{color:rgb(243, 156, 18);border-bottom:solid 1px;}
 .interview_carousel_fourteen{background: url(../img/interview/xan_florianopolis_championship_background_test.jpg)no-repeat center;background-size:cover;}
 .interview_carousel_fifteen{background: url(../img/interview/xan_exhibition_gallery_two_test.jpg)no-repeat center;background-size:cover;}
 .interview_carousel_sixteen{background: url(../img/interview/xan_msq_two.jpg)no-repeat center;background-size:cover;}
+.interview_carousel_seventeen{background: url(../img/interview/xan_msq_three.jpg)no-repeat center;background-size:cover;background-position-y:-116px}
 .blrsa, .tstc, .sl, .crd, .ap, .ls{border-radius:2px;white-space:nowrap;background-color: rgba(106, 30, 66,.8);color:rgb(255,255,255);padding:1px 3px 0px 3px;all .3s ease-in-out}
 .blrsa:hover, .kpla:hover, .tstc:hover, .sl:hover, .crd:hover, .ap:hover, .ls:hover{transition:all .3s ease-in-out;text-decoration: underline;}
 .kpla{white-space: nowrap;color:rgb(255,255,255);padding:0px 2px 0px;background:rgba(255, 102, 0,.8);all .3s ease-in-out;}
